--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,30 +1,51 @@
+# Final Cloud Build configuration using Artifact Registry (GAR)
+
 steps:
+# 1. Build the Docker Image 🐳
+# Tagging the image with the Artifact Registry (GAR) multi-region US path.
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/udemy-mlops-395416/demo-flask-app', '.']
+  id: Build
+  args:
+    - 'build'
+    - '-t'
+    # Uses: us-docker.pkg.dev/mlops-479014/demo-flask-images/demo-flask-app:$_TAG
+    - 'us-docker.pkg.dev/mlops-479014/demo-flask-images/demo-flask-app:$_TAG'
+    - '.'
 
+# 2. Push the Docker Image to Artifact Registry (GAR) ⬆️
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/udemy-mlops-395416/demo-flask-app']
+  id: Push-to-GAR
+  args:
+    - 'push'
+    - 'us-docker.pkg.dev/mlops-479014/demo-flask-images/demo-flask-app:$_TAG'
 
-- name: 'gcr.io/udemy-mlops-395416/demo-flask-app'
+# 3. Run Unit Tests (using the built image as the runner) ✅
+# The name MUST include a tag ($_TAG) for Cloud Build to parse the reference.
+- name: 'us-docker.pkg.dev/mlops-479014/demo-flask-images/demo-flask-app:$_TAG'
+  id: Unit-Tests
   entrypoint: 'bash'
   args:
-   - '-c'
-   - |
+    - '-c'
+    - |
       python -m pytest
 
+# 4. Deploy to Cloud Run 🚀
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: Deploy-to-CloudRun
   entrypoint: gcloud
   args:
-   - 'run'
-   - 'deploy'
-   - 'demo-flask-app'
-   - '--image'
-   - 'gcr.io/udemy-mlops-395416/demo-flask-app'
-   - '--region'
-   - 'us-central1'
-   - '--allow-unauthenticated'
+    - 'run'
+    - 'deploy'
+    - 'py-bq-load' # Service name used in successful attempts
+    - '--image'
+    - 'us-docker.pkg.dev/mlops-479014/demo-flask-images/demo-flask-app:$_TAG'
+    - '--region'
+    - 'us-central1'
+    - '--allow-unauthenticated'
+
+# Specify the image that Cloud Build should tag and push
 images:
-- 'gcr.io/udemy-mlops-395416/demo-flask-app'
+- 'us-docker.pkg.dev/mlops-479014/demo-flask-images/demo-flask-app:$_TAG'
 
 options:
   logging: CLOUD_LOGGING_ONLY
